@@ -9,8 +9,7 @@
 <body>
 
     <div metal:fill-slot="main">
-    <metal:main-macro define-macro="main"
-                      tal:define="templateId template/getId">
+    <metal:main-macro define-macro="main">
 
         <div tal:replace="structure provider:plone.abovecontenttitle" />
 
@@ -28,58 +27,57 @@
 
         <div metal:define-macro="text-field-view"
              id="parent-fieldname-text" class="stx"
-             tal:define="text context/aq_explicit/getText|nothing"
+             tal:define="text view/text"
              tal:condition="text"
-             tal:attributes="class python:test(context.Format() in ('text/structured',
-                                                   'text/x-rst', ), 'stx', 'plain')">
+             tal:attributes="class view/stx_format">
             <div metal:define-slot="inside" tal:replace="structure text">The body</div>
         </div>
 
         <metal:listingmacro define-macro="listing">
-        <tal:foldercontents define="contentFilter contentFilter|request/contentFilter|nothing;
-                            limit_display limit_display|request/limit_display|nothing;
-                            more_url more_url|request/more_url|string:folder_contents;
-                            is_a_topic python:context.portal_type=='Topic';
-                            folderContents folderContents|nothing; folderContents python:folderContents or is_a_topic and context.queryCatalog(contentFilter, batch=True) or context.getFolderContents(contentFilter, batch=True, b_size=limit_display or 100);
-                            site_properties context/portal_properties/site_properties;
-                            use_view_action site_properties/typesUseViewActionInListings|python:();
-                            over_limit python: limit_display and len(folderContents) > limit_display;
-                            folderContents python: (over_limit and folderContents[:limit_display]) or folderContents;
-                            batch folderContents;
-                            isAnon context/@@plone_portal_state/anonymous;
-                            normalizeString nocall: context/plone_utils/normalizeString;
-                            toLocalizedTime nocall: context/@@plone/toLocalizedTime;
-                            show_about python:not isAnon or site_properties.allowAnonymousViewAbout;">
+        <tal:foldercontents define="
+            getInfoFor nocall:view/getInfoFor;
+            is_a_topic view/is_a_topic;
+            normalizeString nocall:view/normalizeString;
+            show_about view/show_about;
+            toLocalizedTime nocall:view/toLocalizedTime;
+            use_view_action view/use_view_action;
+            plone_view nocall:context/@@plone;
+            limit_display limit_display|request/limit_display|nothing;
+            more_url more_url|request/more_url|string:folder_contents;
+            folderContents folderContents|nothing; folderContents python:folderContents or is_a_topic and context.queryCatalog(batch=True) or context.getFolderContents(batch=True, b_size=limit_display or 100);
+            over_limit python: limit_display and len(folderContents) > limit_display;
+            folderContents python: (over_limit and folderContents[:limit_display]) or folderContents;
+            batch folderContents;">
         <tal:listing condition="folderContents">
 
             <dl>
                 <tal:entry tal:repeat="item folderContents">
-                <tal:block tal:define="item_url item/getURL|item/absolute_url;
-                                       item_id item/getId|item/id;
-                                       item_title_or_id item/Title|item_id;
-                                       item_description item/Description;
-                                       item_type item/portal_type;
-                                       item_type_title item/Type;
-                                       item_modified item/ModificationDate;
-                                       item_created item/CreationDate;
-                                       item_icon python:plone_view.getIcon(item);
-                                       item_type_class python:'contenttype-' + normalizeString(item_type);
-                                       item_wf_state item/review_state|python: context.portal_workflow.getInfoFor(item, 'review_state', '');
-                                       item_wf_state_class python:'state-' + normalizeString(item_wf_state);
-                                       item_creator item/Creator;
-                                       item_start item/start/ISO|item/StartDate|nothing;
-                                       item_end item/end/ISO|item/EndDate|nothing;
-                                   ">
+                <tal:block tal:define="
+                    item_url item/getURL|item/absolute_url;
+                    item_id item/getId|item/id;
+                    item_title_or_id item/Title|item_id;
+                    item_description item/Description;
+                    item_type item/portal_type;
+                    item_type_title item/Type;
+                    item_modified item/ModificationDate;
+                    item_created item/CreationDate;
+                    item_icon python:plone_view.getIcon(item);
+                    item_type_class python:'contenttype-' + normalizeString(item_type);
+                    item_wf_state item/review_state|python: view.getInfoFor(item);
+                    item_wf_state_class python:'state-' + normalizeString(item_wf_state);
+                    item_creator item/Creator;
+                    item_start item/start/ISO|item/StartDate|nothing;
+                    item_end item/end/ISO|item/EndDate|nothing;">
 
                     <dt metal:define-macro="listitem"
-                        tal:attributes="class python:test(item_type == 'Event', 'vevent', '')">
+                        tal:attributes="class python:item_type == 'Event' and 'vevent' or ''">
 
                         <span class="summary"
                               tal:attributes="class string:$item_type_class summary"
                               tal:condition="python:item_type != 'Link'">
                             <img tal:replace="structure item_icon/html_tag" />
                             <a href="#"
-                               tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);
+                               tal:attributes="href python:item_type in use_view_action and item_url+'/view' or item_url;
                                                class string:${item_wf_state_class} url"
                                tal:content="item_title_or_id">
                                 Item Title
@@ -122,7 +120,7 @@
                                 &mdash;
 
                                 <tal:name tal:condition="item_creator"
-                                    tal:define="author python:context.portal_membership.getMemberInfo(item_creator)">
+                                    tal:define="author python:view.getMemberInfo(item_creator)">
                                   <span i18n:translate="label_by_author">
                                     by
                                   <a href="#"
