@@ -1,2 +1,0 @@
-[default]
-title=Standard view
